# MiTHBridge2

./: .gitignore  CMakeLists.txt  README.md  build.dockerfile  build.esp32c6.xiao_external-antenna.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
.devcontainer/: Dockerfile  esp-idf.code-profile
.github/workflows/: build-and-release.yml
extra/: SERVER.md
extra/casing/: README.md
extra/esp32c6.xiao_external-antenna/: ANTENNA.md
extra/housing/esp32c6.xiao_external-antenna.case_v1/: esp32c6.xiao_external-antenna.case_v1.MiTHBridge2_esp32c6.xiao_external-antenna.case.bottom.3mf  esp32c6.xiao_external-antenna.case_v1.MiTHBridge2_esp32c6.xiao_external-antenna.case.top.3mf
main/: CMakeLists.txt  Kconfig  checks.h  configurator.c  configurator.h  configurator_console.c  configurator_console.h  led_flasher.c  led_flasher.h  main.c  nvs_keys.h  sensor.c  sensor.h  sensor_ble.c  sensor_ble.h  sensor_esp32.c  sensor_esp32.h  sensor_sender_influx_line_https.c  sensor_sender_influx_line_https.h  xiao_esp32c6_amp.h
nvs/: nvs.empty.csv
